--- a/component-library/components/blog-card/blog-card.jekyll.html
+++ b/component-library/components/blog-card/blog-card.jekyll.html
@@ -4,7 +4,7 @@
 
     {% if include.post.image %}
     <div class="{{c}}__image-wrap">
-      <a class="{{c}}__image" href="{{ include.post.url }}">
+      <a class="{{c}}__image" href="{{site.baseurl}}{{ include.post.url }}">
         <img loading="lazy" src="{{ include.post.image }}" alt="{{ include.post.title }}">
       </a>
     </div>
